# mock-machine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
apps/backend/: Cargo.toml  Dockerfile
apps/backend/migrations/: 0001_initial_schema.sql  0002_seed.sql  0003_profiles.sql  0004_projects.sql  0005_project_keys.sql  0006_project_default_proxy_url.sql
apps/backend/src/: config.rs  domain.rs  http.rs  main.rs  migrations.rs  realtime.rs  state.rs
apps/backend/src/entities/: mock_routes.rs  mod.rs  object_assets.rs  projects.rs  response_scenarios.rs  unknown_requests.rs
apps/backend/src/repository/: cached.rs  in_memory.rs  minio.rs  mod.rs  postgres.rs  redis.rs  validation.rs
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
apps/frontend/src/: App.tsx  config.ts  main.tsx  styles.css  types.ts
apps/frontend/src/components/: ConvertDialog.tsx  Metric.tsx  ProjectDialog.tsx  ProjectSettings.tsx  RouteSettingsDialog.tsx  RoutesTable.tsx  UnknownRequestsTable.tsx
apps/frontend/src/lib/: api.ts  forms.ts
docs/: api.md  backup-restore.md  configuration.md  installation.md  storage.md  upgrading.md
docs/adr/: 0001-stack.md  0002-routing-and-nginx.md  0003-unknown-request-capture.md  0004-mcp-server.md
docs/brd/: 01-product-context.md  02-functional-requirements.md  03-non-functional-requirements.md
infra/minio/policies/: mock-machine-readwrite.json
infra/minio/scripts/: bootstrap.sh
infra/nginx/: default.conf  project-subdomains.example.conf
infra/postgres/init/: 001_schema.sql  002_seed.sql
