[package]
name = "mock-machine-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock-machine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
