[package]
name = "mock-machine-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock-machine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-s3 = "1.55"
axum = "0.8"
base64 = "0.22"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4"] }
